--- a/js/main/full-screen-opportune-skin.html
+++ b/js/main/full-screen-opportune-skin.html
@@ -98,7 +98,20 @@ overflow-x:hidden;
 <div id="bannerscollection_zoominout_27">
                 <div class="myloader"></div>
                 <ul class="bannerscollection_zoominout_list">
-                <li data-text-id="#bannerscollection_zoominout_photoText239" data-video="false" data-bottom-thumb="images/oportuneFullScreenWidth/thumbs/01_fs_oport_thumb.jpg" data-link="" data-target="" data-autoPlay="11" data-horizontalPosition="center" data-verticalPosition="top" data-initialZoom="1" data-finalZoom="0.77" data-duration="" data-zoomEasing="" ><img src="images/oportuneFullScreenWidth/FScreen_1.jpg" width="2500" height="1570" style="width:2500px; height:1570px;" alt="" /></li>
+                <li data-text-id="#bannerscollection_zoominout_photoText239" 
+                data-video="false" 
+                data-bottom-thumb="images/oportuneFullScreenWidth/thumbs/01_fs_oport_thumb.jpg" 
+                data-link="" 
+                data-target="" 
+                data-autoPlay="11" 
+                data-horizontalPosition="center" 
+                data-verticalPosition="top" 
+                data-initialZoom="1" 
+                data-finalZoom="0.77" 
+                data-duration="" 
+                data-zoomEasing="" >
+                <img src="../../img/digger2.jpg" width="2500" height="1570" style="width:2500px; height:1570px;" alt="" /></li>
+                
                 <li data-text-id="#bannerscollection_zoominout_photoText236" data-video="false" data-bottom-thumb="images/oportuneFullScreenWidth/thumbs/02_fs_oport_thumb.jpg" data-link="" data-target=""  data-horizontalPosition="left" data-verticalPosition="center" data-initialZoom="0.77" data-finalZoom="0.9" data-duration="" data-zoomEasing="ease" ><img src="images/oportuneFullScreenWidth/02_FSopportune.jpg" width="2500" height="1570" style="width:2500px; height:1570px;" alt="" /></li>
                 <li data-text-id="#bannerscollection_zoominout_photoText241" data-video="false" data-bottom-thumb="images/oportuneFullScreenWidth/thumbs/03_fs_oport_thumb.jpg" data-link="" data-target=""  data-horizontalPosition="center" data-verticalPosition="bottom" data-initialZoom="0.77" data-finalZoom="0.96" data-duration="" data-zoomEasing="" ><img src="images/oportuneFullScreenWidth/FScreenWin4.jpg" width="2500" height="1570" style="width:2500px; height:1570px;" alt="" /></li>
                 </ul>
